# APB

./: README.md  requirements.txt  requirements_spava.txt
apb/: __init__.py  inference.py  load_models.py
apb/models/: modeling_llama.py
dependencies_spava/flash-attention-apb/: test_apb.py  test_apbz.py
dependencies_spava/ring-flash-attention-main/: README.md
examples/: llama.sh
examples_apb/: llama.py
experiments/APB/: environment.yml  launch_batch.sh  launch_d_minf.sh  modeling_llama_h2o_.py  modeling_llama_sirllm.py  run_flash_attn.py  run_flash_attn_time.py  run_flash_attn_time_b.py  run_lring_attn.py  run_minf_attn.py  run_minf_attn_time_.py  run_minf_attn_time_b.py  run_minf_attn_time_batch.py  run_ring_attn.py  run_ring_attn_d_time.py  run_ruler.py  run_ruler_d.py  run_star_attn_d_time.py  run_star_attn_inference.py  run_star_attn_inference_time.py  run_star_attn_time.py  run_ulysses_attn.py  run_ulysses_attn_d.py
experiments/flash-attention-apb/: setup.py
experiments_apb/: README.md
experiments_apb/APB/: convert.py  gendata.sh  launch.sh  launch_b.sh  launch_d.sh  launch_len.sh  launch_locret.sh  model.py  modeling_llama_h2o.py  modeling_llama_locret.py  modeling_llama_snapkv.py  qwen.json  run_flash_attn_time_batch.py  run_flash_attn_time_locret.py  run_lring_attn_d.py  run_lring_attn_d_time.py  run_lring_attn_time.py  (+12 more)
experiments_apb/ring-flash-attention-main/: pyproject.toml  setup.py  test_all2all.py
experiments_apb/ring-flash-attention-main/ring_flash_attn/: lring_flash_attn.py  lring_flash_attn_varlen.py  ring_flash_attn.py  utils.py
(+390 files in other folders)
